# Armora

./: CMakeLists.txt  README.md
cmake/: armoraConfig.cmake.in
demo/: README.md  package.json  server.js
demo/public/: app.js  index.html  style.css
docs/: DEMO_GUIDE.md  HARDWARE_SETUP.md
include/armora/: Types.hpp
scripts/: run_integration_tests.sh  run_tests.sh  setup_veth.sh
src/: main.cpp  tunnel_main.cpp
src/bridge/: BridgeEngine.cpp  BridgeEngine.hpp  PacketBuffer.hpp
src/crypto/: CryptoHandler.cpp  CryptoHandler.hpp  HybridPQCProvider.cpp  HybridPQCProvider.hpp  ICryptoProvider.hpp
src/network/: NetworkInterface.cpp  NetworkInterface.hpp  PcapCapture.hpp
src/tunnel/: TunnelEngine.cpp  TunnelEngine.hpp  UdpTunnel.cpp  UdpTunnel.hpp
tests/: CMakeLists.txt  test_buffer.cpp  test_crypto.cpp  test_integration.cpp
